@@ -19,6 +19,7 @@
 <!-- doxrox-include igraph_vcount -->
 <!-- doxrox-include igraph_ecount -->
 <!-- doxrox-include igraph_edge -->
+<!-- doxrox-include igraph_get_eid -->
 <!-- doxrox-include igraph_neighbors -->
 <!-- doxrox-include igraph_adjacent -->
 <!-- doxrox-include igraph_is_directed -->
