@@ -1,3 +1,8 @@
+2006-07-16  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/type_indexededgelist.c (igraph_get_eid) : added
+	* examples/simple/igraph_get_eid.c : added
+
 2006-07-15  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/foreign.c (igraph_read_graph_pajek) : reset line number
